syntax= "proto3";

package followships_microservice;
option go_package= "grpc_generated/";

import "google/protobuf/empty.proto";

service FollowshipsService {
	rpc Ping(google.protobuf.Empty) returns(google.protobuf.Empty);

	rpc Follow(FollowshipOperationRequest) returns(google.protobuf.Empty);
	rpc Unfollow(FollowshipOperationRequest) returns(google.protobuf.Empty);
	rpc DoesFollowshipExist(DoesFollowshipExistRequest) returns(DoesFollowshipExistResponse);

	rpc GetFollowers(GetFollowersRequest) returns(GetFollowersResponse);
	rpc GetFollowings(GetFollowingsRequest) returns(GetFollowingsResponse);
	rpc GetFollowshipCounts(GetFollowshipCountsRequest) returns(GetFollowshipCountsResponse);
}

message FollowshipOperationRequest {
	int32 follower_id= 1;
	int32 followee_id= 2;
}

message GetFollowersRequest {
	int32 user_id= 1;

	int64 page_size= 2;
	int64 offset= 3;
}

message GetFollowersResponse {
	repeated int32 follower_ids= 1;
}

message GetFollowingsRequest {
	int32 user_id= 1;

	int64 page_size= 2;
	int64 offset= 3;
}

message GetFollowingsResponse {
	repeated int32 followee_ids= 1;
}

message GetFollowshipCountsRequest {
	int32 user_id= 1;
}

message GetFollowshipCountsResponse {
	int64 follower_count= 1;
	int64 following_count= 2;
}

message DoesFollowshipExistRequest {
	int32 follower_id= 1;
	int32 followee_id= 2;
}

message DoesFollowshipExistResponse {
	bool exists= 1;
}